--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,7 +16,7 @@
  	font-size: 14px;
  	font-weight: bold;
  	margin-top: 20px;
- 	padding: 10px !!important;
+ 	padding: 10px !important;
  }
 
 .alert-notice{
