--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,9 +1,9 @@
 <header class="row">
 	<div class="container">
 		<div id="logo">
-			<%= link_to image_tag("movieLogo.svg", alt: "Shortcuts", size: "50x50"), root_path %>
+			<%= link_to image_tag("cw_logo.png", alt: "Shortcuts", size: "100x50"), root_path %>
 			<br>
-			<h1><%= link_to "Movie site", root_path %></h1>
+			<h1><%= link_to "Coronellw", root_path %></h1>
 		</div>
 		<div class="pull-right">
 			<div id="search-bar">
