adding omniauth gems and favicon

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -45,6 +45,7 @@
 		<li>jQuery</li>
 		<li>PHP</li>
 		<li>Git, github, svn</li>
+		<li>HTML5 / CSS3</li>
 	</ul>
 </div>
 
@@ -76,3 +77,5 @@
 </div>
 <br>
 <br class="clearfix">
+
+<em>Note:</em> I know my site won't win a prize for my html/css, but also all the design was made only by me
