--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
 	  
 	  <%= csrf_meta_tags %>
 	  <%= render 'layouts/shim' %>
+	  <link rel="icon" type="image/png" href="/assets/favicon.png">
 	</head>
 	<body>
 		<%= render 'layouts/header' %>
