added minimal changes to visual effects

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -11,7 +11,7 @@
 	<div class="col-md-4">
 		<!-- <h3>Wanna know me? this is my picture</h3> -->
 		<center>
-			<%= image_tag("me.png", alt: "Hello, this is how I look", size: "200x200") %>
+			<%= image_tag("me.png", alt: "Hello, this is how I look", size: "200x200", class: "profile-pic") %>
 		</center>
 	</div>
 </div>
