adding images to project

--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -249,3 +249,11 @@ table, th, td, tr {
   border-radius: 100px;
   border: 8px solid;
 }
+
+.tools-logo {
+  background: #000;
+  border-radius: 100px;
+  border: 3px solid white;
+  margin: 0 10px;
+  padding: 25px;
+}
