--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -48,6 +48,15 @@
 		<li>HTML5 / CSS3</li>
 	</ul>
 </div>
+<br style="clear: both;">
+<center>
+	<%= image_tag("RoR_logo.png", alt: "RoR", size: "200x200", class: "tools-logo") %>
+	<%= image_tag("angular_js.png", alt: "AngularJS", size: "200x200", class: "tools-logo") %>
+	<%= image_tag("MongoDB.png", alt: "Mongo DB", size: "200x200" ) %>
+	<br>
+	<%= image_tag("HTML5_Logo.png", alt: "HTML5", size: "200x200", class: "tools-logo") %>
+	<%= image_tag("logo_CSS3.png", alt: "CSS3", size: "200x200", class: "tools-logo") %>
+</center>
 
 <br style="clear: both;">
 <div style="display: none;">
